feat: update extension and file icons to Falco logo.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"Snippets",
 		"Themes"
 	],
-	"icon": "fileicons/images/shovel.png",
+	"icon": "fileicons/images/falco.png",
 	"activationEvents": [
 		"onCommand:vscode-falco.validateRule",
 		"onLanguage:rules"
