chore: Use Falco Rules as alias to showcase Falco

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 					".yaml"
 				],
 				"aliases": [
-					"Rules",
+					"Falco Rules",
 					"yaml"
 				],
 				"configuration": "./languages/rules-language.json"
